# open-zl

./: .gitattributes  .gitignore  README.md
src/: CMakeLists.txt  main.cpp  resources.rc
src/core/: audio.cpp  audio.h  controls.cpp  controls.h  resourcelocator.cpp  resourcelocator.h  system.cpp  system.h  window.cpp  window.h
src/core/fonts/: font.cpp  font.h  magofont3.cpp
src/development_resources/dialogue/: ZeldaLike.twee
src/development_resources/levels/: map.ldtk  tileset.aseprite
src/development_resources/scripts/: main.lua  player.lua
src/game/: dialogueviewer.cpp  dialogueviewer.h  events.cpp  events.h  game.cpp  game.h  playerdata.cpp  playerdata.h  world.cpp  world.h  worldcell.cpp  worldcell.h  worldloader.cpp  worldloader.h
